<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Screen2">

    <Button
        android:id="@+id/NextBtnPage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="44dp"
        android:shadowColor="#FF1A1A"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF0000"
        android:textColorHint="#FF0000"
        android:textColorLink="#FF0000"
        app:backgroundTint="#31000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#FFFFFF"
        app:strokeColor="#FF0000" />

    <TextView
        android:id="@+id/page1Header"
        android:layout_width="254dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/Page2Header"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/prevBtnPage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="44dp"
        android:shadowColor="#FF1A1A"
        android:text="@string/prev2"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF0000"
        android:textColorHint="#FF0000"
        android:textColorLink="#FF0000"
        app:backgroundTint="#6618F1"
        app:iconTint="#05AE77"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#FFFFFF"
        app:strokeColor="#FF0000" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="326dp"
        android:layout_height="162dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/ai_nueral_network_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/ai_example" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="284dp"
        android:layout_height="219dp"
        android:layout_marginTop="16dp"
        android:text="@string/Page2Txt"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page1Header" />

</androidx.constraintlayout.widget.ConstraintLayout>