<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#32FFFFFF"
    tools:context=".Weights">

    <Button
        android:id="@+id/nextBtnPage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="28dp"
        android:shadowColor="#FF1A1A"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF0000"
        android:textColorHint="#FF0000"
        android:textColorLink="#FF0000"
        app:backgroundTint="#31000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Page1Txt"
        app:layout_constraintVertical_bias="0.117"
        app:rippleColor="#FFFFFF"
        app:strokeColor="#FF0000" />

    <Button
        android:id="@+id/prevBtnPage3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="28dp"
        android:shadowColor="#FF1A1A"
        android:text="@string/prev2"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FF0000"
        android:textColorHint="#FF0000"
        android:textColorLink="#FF0000"
        app:backgroundTint="#6618F1"
        app:iconTint="#05AE77"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#FFFFFF"
        app:strokeColor="#FF0000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="246dp"
        android:layout_height="266dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="80dp"
        android:text="@string/this_page_will_display_some_info_about_how_the_weights_and_biases_work"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>